# symbolic-differentiator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: interpreter.rs  main.rs
src/interpreter/: differentiator.rs  lexer.rs  mod.rs  operator.rs  parser.rs  simplifier.rs  text_parser.rs  token.rs
src/interpreter/parser/: abstract_syntax_tree_generator.rs  expression_tree.rs  expression_tree_generator.rs  infix_converter.rs  mod.rs
src/interpreter/syntax/: composite.rs  expression_tree.rs
src/parser/: text_parser.rs
symbolic-differentiator-cli/: Cargo.toml
symbolic-differentiator-cli/src/: main.rs
symbolic-differentiator-lib/: Cargo.toml
symbolic-differentiator-lib/benches/: differentiation_benchmark.rs
symbolic-differentiator-lib/src/: lib.rs
symbolic-differentiator-lib/src/interpreter/: differentiator.rs  mod.rs  operator.rs  simplifier.rs  token.rs
symbolic-differentiator-lib/src/interpreter/parser/: mod.rs
symbolic-differentiator-lib/src/interpreter/syntax/: composite.rs  expression_tree.rs  mod.rs  syntax_visitor.rs
